<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <!-- Header aligned to top -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="500dp"
        android:layout_height="45dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/header"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dip"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <!-- Footer aligned to bottom -->


    <!-- Content below header and above footer -->

    <TextView
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="60dip"
        android:gravity="center"
        android:text="@string/info"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="85dip"
        android:gravity="center"
        android:text="@string/fillinfo"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_name_signup"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_below="@id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="50dip"
        android:paddingLeft="5dp"
        android:background="@drawable/textbox"
        android:hint="@string/Name"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_email_signup"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_below="@id/et_name_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:paddingLeft="5dp"
        android:background="@drawable/textbox"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_password_signup"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_below="@id/et_email_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:paddingLeft="5dp"
        android:background="@drawable/password"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_confirmpass_signup"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_below="@id/et_password_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:paddingLeft="5dp"
        android:background="@drawable/password"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/signup"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/et_confirmpass_signup"
        android:layout_alignRight="@+id/et_confirmpass_signup"
        android:layout_below="@+id/et_confirmpass_signup"
        android:layout_marginTop="25dp"
        android:background="@drawable/join"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>