<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
          android:layout_marginLeft="10dip"
           android:layout_marginRight="10dip"
        android:background="@drawable/logo"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
         />

    <EditText
        android:id="@+id/et_name_login"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/login"
          android:layout_marginLeft="10dip"
           android:layout_marginRight="10dip"
              android:layout_marginTop="35dip"
        android:background="@drawable/textbox"
        android:hint="@string/Name"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="10dip"
           android:layout_marginRight="10dip"
        android:layout_below="@id/et_name_login"
        android:layout_marginTop="15dip"
        android:background="@drawable/password"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:singleLine="true" />
    

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dip"
           android:layout_marginRight="10dip"
        android:layout_below="@id/et_password_login"
         android:layout_marginTop="20dip"
        android:background="@drawable/login"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbutton"
        android:layout_marginTop="50dp"
        android:text="@string/reg"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/regg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbutton"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@id/reg"
        android:text="@string/regg"
        android:textColor="@color/red"
        android:textSize="16sp" />

</RelativeLayout>