<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <!-- Header aligned to top -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="500dp"
        android:layout_height="45dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/header"
        android:gravity="center" >
        <Button
            android:id="@+id/details_loginbutton"
            android:layout_width="45dp"
            android:layout_height="48dp"
            android:layout_marginLeft="140dip"
            android:layout_toRightOf="@+id/textView1"
            android:background="@drawable/login1"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/details_logoutbutton"
            android:layout_width="45dp"
            android:layout_height="48dp"
            android:layout_marginLeft="140dp"
            android:layout_toRightOf="@+id/textView1"
            android:background="@drawable/logout"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/details_loginbutton"
            android:layout_alignBottom="@+id/details_loginbutton"
            android:layout_alignParentLeft="true"
            android:text="@string/details"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/home_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="250dp"
        
            android:background="@drawable/home"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/res_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text=""
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/res_address"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/res_name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/address"
 
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_res_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/res_name"
        android:layout_marginTop="15dp"
        android:layout_alignBaseline="@+id/res_address"
        android:layout_toRightOf="@+id/res_address"
        android:text="kkkk"
        android:textColor="@color/red"
        android:textSize="16sp" />

     <View
         android:id="@+id/line"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tv_res_address"
         android:layout_marginRight="12dp"
         android:layout_marginTop="1dp"
         android:layout_toRightOf="@+id/res_address"
         android:background="@color/red" />
    
    <TextView
        android:id="@+id/res_city"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/res_address"
        android:layout_marginLeft="10dp"
       android:layout_marginTop="5dp"
         
        android:text="@string/city"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_res_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_res_address"
        android:layout_marginTop="5dp"
         android:layout_alignBaseline="@+id/res_city"
        android:layout_toRightOf="@+id/res_city"
        android:text="kkk"
        android:textColor="@color/red"
        android:textSize="16sp" />
    
    
    <View
         android:id="@+id/line1"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tv_res_city"
         android:layout_marginRight="12dp"
         android:layout_marginTop="1dp"
         android:layout_toRightOf="@+id/res_city"
         android:background="@color/red" />
    

    <TextView
        android:id="@+id/res_state"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/res_city"
        android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
  
        android:text="@string/state"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_res_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_res_city"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/res_state"
         android:layout_alignBaseline="@+id/res_state"
        android:text="kkkk"
        android:textColor="@color/red"
        android:textSize="16sp" />
    
    
    
    
    
    <View
         android:id="@+id/line3"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tv_res_state"
         android:layout_marginRight="12dip"
         android:layout_marginTop="1dp"
         android:layout_toRightOf="@+id/res_state"
         android:background="@color/red" />

    <TextView
        android:id="@+id/res_postalCode"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/res_state"
        android:layout_marginLeft="10dp"
 android:layout_marginTop="5dp"
        
        android:text="@string/postalCode"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_res_postalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_res_state"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
            android:layout_alignBaseline="@+id/res_postalCode"
        android:layout_toRightOf="@+id/res_postalCode"
        android:text="kkkk"
        android:textColor="@color/red"
        android:textSize="16sp" />
    
    
    
    <View
         android:id="@+id/line8"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
       
         android:layout_below="@+id/tv_res_postalCode"
         android:layout_marginRight="11dp"
            android:layout_marginLeft="10dp"
           android:layout_marginTop="1dp"
           android:layout_alignBaseline="@+id/res_postalCode"
         android:layout_toRightOf="@+id/res_postalCode"
         android:background="@color/red" />
    
    <View
         android:id="@+id/line4"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
      
         android:layout_below="@+id/tv_res_phone"
         android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
         android:layout_marginTop="1dp"
           android:layout_alignBaseline="@+id/res_phone"
         android:layout_toRightOf="@+id/res_phone"
         android:background="@color/red" />

    
    
    
    <ImageView
        android:id="@+id/res_phone"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/res_postalCode"
        android:layout_marginLeft="10dp"
       
       android:layout_marginTop="6dp"
        android:background="@drawable/phone"
        android:text="@string/phone"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_res_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_res_postalCode"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/res_phone"
           android:layout_alignBaseline="@+id/res_phone"
        android:text="6666"
        android:textColor="@color/red"
        android:textSize="16sp" />
  

    <Button
        android:id="@+id/show_map"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/setRating"
       android:layout_marginTop="15dp"
         android:layout_marginRight="10dp"
        android:background="@drawable/showmap" />

    <TextView
        android:id="@+id/avg_ratings"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/res_phone"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/avg_ratings"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <RatingBar
        android:id="@+id/getRating"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/avg_ratings"
        android:layout_margin="5dp"
        android:layout_marginLeft="10dp"
        android:numStars="5"
        >
    </RatingBar>

    <RatingBar
        android:id="@+id/setRating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/getRating"
        android:layout_marginLeft="10dp"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize="0.1" />

    <Button
        android:id="@+id/res_ratebutton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/avg_ratings"
        android:layout_marginTop="15dp"
          android:layout_marginRight="10dp"
        android:layout_toRightOf="@id/getRating"
        android:background="@drawable/rate"
       
        android:textStyle="bold" />

    <Button
        android:id="@+id/res_reviewsbutton"
        android:layout_width="62dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/setRating"
       android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/review"
        />

</RelativeLayout>